# lattice_boltzmann_rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  unsteady.rs  unsteady_gen.rs
src/generic/: mod.rs
src/lbm/: boundaries.rs  constants.rs  mod.rs
